--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <div class="bg"></div>
     <a id="profilePicture" href="#popup">
-      <img src="https://media.discordapp.net/attachments/1034419311391035436/1034419366311231518/Nouveau_projet_4_2.png" alt="Profile Picture">
+      <img src="https://scontent-cdg4-2.cdninstagram.com/v/t51.288…X5V3xl4ssz4QkB9EEzhJDA&oe=652F8DFB&_nc_sid=ee9879" alt="Profile Picture">
     </a>
 
   
